--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -11985,6 +11985,10 @@ body {
   margin-bottom: 8px;
 }
 
+.score {
+  width: 30px;
+}
+
 .btn {
   width: 250px;
 }/*# sourceMappingURL=style.css.map */
