--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -11991,4 +11991,8 @@ body {
 
 .btn {
   width: 250px;
+}
+
+.bg-primary {
+  background-color: lightblue !important;
 }/*# sourceMappingURL=style.css.map */
