--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,7 +1,7 @@
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
 
 body {
-    background-color: rgb(198, 198, 225);
+    background-color: rgb(219, 216, 200);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -9,9 +9,34 @@ body {
     margin: 0;
 }
 
+.bg-primary {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    padding: 10px;
+    background-color: rgb(0, 0, 0, 0) !important;
+    box-shadow: 0px 0px 15px 4px lightblue;
+}
+
+
 .card {
-    width: 700px;
+    width: 600px;
     height: 300px;
+    border: 0;
+    background-color: rgba(255, 255, 255, 0.0);
+}
+
+.card::before {
+    content: "";
+    position: absolute;
+    top: -85%;
+    width: 900px;
+    height: 750px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-image: var(--bg-image, url("data:image/svg+xml;utf8,%3Csvg viewBox=%220 0 1000 1000%22 xmlns=%22http:%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cdefs%3E%3CclipPath id=%22a%22%3E%3Cpath fill=%22currentColor%22 d=%22M858.5 689.5Q719 879 497 884T229 694.5Q183 500 218.5 287t240-141q204.5 72 372 213t28 330.5Z%22%2F%3E%3C%2FclipPath%3E%3C%2Fdefs%3E%3Cg clip-path=%22url(%23a)%22%3E%3Cpath fill=%22%23f7e545%22 d=%22M858.5 689.5Q719 879 497 884T229 694.5Q183 500 218.5 287t240-141q204.5 72 372 213t28 330.5Z%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E"));
+    z-index: -1;
 }
 
 .card-img-top {
@@ -26,8 +51,18 @@ body {
 
 .btn {
     width: 250px;
+    border-radius: 25px;
+    outline: solid 1px black;
+    box-shadow: 6px 4px 2px 4px lightblue;
 }
 
-.bg-primary {
-    background-color: lightblue !important;
+.btn-score {
+    width: 50px;
+    border-radius: 25px !important;
 }
+
+.magicpattern { 
+    width: 100%;
+    height: 100%;
+ 
+}  
